# ConstrainedTypes

./: .gitignore  CMakeLists.txt  Doxyfile.in  GitUtils.cmake  README.md  TargetArch.cmake  cmake_install.cmake  compil-option.cmake  compile.sh  config.cmake  testing.cmake
include/: arithmetic_binary_op.hpp  base.hpp  bitwise_binary_op.hpp  constrain.hpp  numeric.hpp  operator.hpp
src/: CMakeLists.txt  main.cpp
